# entsoe

./: .gitignore  Cargo.toml  LICENSE  README.md
.ai/: AI_QUICKSTART.md  API_REFERENCE.md  DEVELOPMENT_GUIDE.md  PROJECT_OVERVIEW.md  PROMPTS.md
examples/: fetch_prices.rs
src/: bidding_zone.rs  client.rs  error.rs  lib.rs
src/models/: mod.rs  price.rs
src/parser/: mod.rs  price_parser.rs
systemd/: entsoe-fetch.service  entsoe-fetch.timer  entsoe-generate-and-upload.service  entsoe-generate-and-upload.timer  entsoe-upload.nu
tests/fixtures/: day_ahead_prices_fi.xml
